<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/numberInputFieldsRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <EditText
            android:id="@+id/firstNumberInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            style="@style/EditTextStyle"
            android:hint="@string/field_1"/>

        <EditText
            android:id="@+id/secondNumberInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstNumberInputField"
            style="@style/EditTextStyle"
            android:hint="@string/field_2"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/operationChosenRadioButtonsRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <RadioGroup
            android:id="@+id/operationChoosingRadioButtonsGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/additionRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation_1"
                android:onClick="onRadioButtonClick"
                style="@style/TextViewStyle"/>

            <RadioButton
                android:id="@+id/subtractionRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation_2"
                android:onClick="onRadioButtonClick"
                style="@style/TextViewStyle"/>

            <RadioButton
                android:id="@+id/divisionRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation_3"
                android:onClick="onRadioButtonClick"
                style="@style/TextViewStyle"/>

            <RadioButton
                android:id="@+id/multiplicationRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation_4"
                android:onClick="onRadioButtonClick"
                style="@style/TextViewStyle"/>
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/valuesInputCheckboxSettingRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <CheckBox
            android:id="@+id/floatValueCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:checked="true"
            android:text="@string/float_values"
            android:onClick="onCheckboxClicked"
            style="@style/TextViewStyle"/>

        <CheckBox
            android:id="@+id/signedValueCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/floatValueCheckbox"
            android:checked="true"
            android:text="@string/signed_values"
            android:onClick="onCheckboxClicked"
            style="@style/TextViewStyle"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/resultOutputFieldRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <TextView
            android:id="@+id/resultOutputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/result_field"
            android:textSize="18sp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/calculationButtonRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <Button
            android:id="@+id/calculationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/calculate_button"
            android:onClick="onButtonClick"
            style="@style/ButtonStyle"/>
    </RelativeLayout>

</android.widget.LinearLayout>